# main

./: README.md
different/OO_FEM_with_tkinter/: IMPORTANT.txt  requirements.txt
different/OO_FEM_with_tkinter/frames/: Visualization.py  app.py  arclength_method_functions.py  simple_version.py
different/c_plus_plus/: CMakeLists.txt  main.cpp
different/c_plus_plus/exercise_25/: CMakeLists.txt  class_25.cpp  class_25.h
different/c_plus_plus/exercise_26/: class_26.cpp  class_26.h
different/c_plus_plus/exercise_27/: class_27.cpp  class_27.h
jupyter_notebooks/bank_marketing/: bank_marketing.ipynb
jupyter_notebooks/predicting_emojis_in_tweets/: Fine_tuning_Hugging_Face_Emoji_Classification.ipynb  Predicting_Emojis_in_Tweets.ipynb
jupyter_notebooks/recommendation_model/: Recomendations.ipynb
jupyter_notebooks/stocks_price_analysis/: stocks_price_analysis.ipynb
jupyter_notebooks/stocks_price_analysis/data/: INFY_2010_2024.csv  INFY_2015_2023.csv  INFY_2023_2024.csv  INFY_JAN_2024.csv  last_driver_version.json
jupyter_notebooks/stocks_price_analysis/extra_files/: aws_funcs.py
recommendations/: Recommendations.py  delta_live_tables.ipynb
recommendations/project_5/utils/: get_recommendation.py  rate_movie.py
tutor_app/: insert_to_mongodb.ipynb  scrapper_source_1.ipynb  scrapper_source_2.ipynb
tutor_app/files/variant_uploader/: example.txt  google_files.py  google_uploader.py
tutor_app/tutor_streamlit/: .gitignore  LICENSE  README.md  requirements.txt
tutor_app/tutor_streamlit/streamlit_app/: app.py  config.yaml
(+39 files in other folders)
